Project

General

Profile

Bug #18860

the thread name of sync is not clear

Added by Jack Lv about 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The thread name of sync is "radosgw", that is same with civetweb thread. It is not good for problem analysis.

History

#1 Updated by Yehuda Sadeh about 7 years ago

  • Status changed from New to Fix Under Review

#2 Updated by Orit Wasserman about 7 years ago

  • Status changed from Fix Under Review to Resolved

Also available in: Atom PDF