rgw: make sync thread name clear

Fixes: http://tracker.ceph.com/issues/18860
Signed-off-by: lvshuhua <lvshuhua@cmss.chinamobile.com>